<resources>
    <string name="app_name">BaeconRoomReservation</string>
    <string name="text_search">Search</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_nearby">Nearby</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="date">Date:</string>
    <string name="new_mitting">New Mitting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_main">Main</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="favorites">Favorites</string>
    <string name="notInRange">Not in range</string>
    <string name="title">Title:</string>
    <string name="location">Location:</string>
    <string name="initializer">Initializer:</string>
    <string name="people">People:</string>
    <string name="signout">Sign out</string>
    <string name="phone_number">Phone number:</string>
    <string name="email">Email:</string>
    <string name="occupied">OCCUPIED</string>
    <string name="room_screen">Room screen</string>
</resources>
