<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_main"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_example"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_main" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_action_name"
            android:visible="false"
            android:fillColor="#FF000000"
            android:viewportWidth="24.0"
            android:viewportHeight="24.0"
            android:title="@string/room_screen" />
    </group>

    <group android:id="@+id/nav_group_add"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_sign_out"
            android:title="@string/signout" />

    </group>
</menu>
